--- a/index.html
+++ b/index.html
@@ -36,19 +36,18 @@
         <section class="practice-grid">
             <div class="current-grid">
                 <div class="titles-grid">
-                    <div class="loop">Loop</div>
+                    <div class="counter">Loop</div>
                     <div class="tempo">Tempo</div>
                     <div class="key">Key or Chord</div>
                     <div class="dur">Duration</div>
                 </div>
                 <div class="info-grid">
-                    <div class="loop"><div><span class="current">-</span>&nbsp;/&nbsp;<span class="total">-</span></div></div>
+                    <div class="counter"><div><span class="current">-</span>&nbsp;/&nbsp;<span class="total">-</span></div></div>
                     <div class="tempo">-</div>
                     <div class="key">-</div>
                     <div class="dur">-</div>
                 </div>
-                <div class="beats-grid">
-                </div>
+                <div class="beats-grid"></div>
             </div>
             <div class="next-grid">
                 <div class="titles-grid">
